Project swift_ticket_system {
  database_type: "PostgreSQL"
  Note: "Trilingual Multimodal Financial Support Ticket Management System"
}

/* =========================================================
   ENUMS
   ========================================================= */

Enum user_role {
  customer
  agent
  administrator
  evaluator
}

Enum interface_language {
  english
  sinhala
  tamil
}

Enum language_form {
  english
  sinhala
  tamil
  singlish
  tanglish
  code_mixed
  unknown
}

Enum ticket_priority {
  low
  medium
  high
  critical
}

Enum sentiment_label {
  positive
  neutral
  negative
}

Enum ticket_status {
  new
  processing
  in_review
  assigned
  escalated
  response_draft
  responded
  resolved
  closed
  reopened
}

Enum note_visibility {
  internal
  customer_visible
}

Enum ticket_event_type {
  ticket_created
  processing_started
  processing_completed
  prediction_completed
  prediction_reviewed
  status_changed
  queue_assigned
  agent_assigned
  agent_reassigned
  escalated
  note_added
  category_corrected
  priority_corrected
  sentiment_corrected
  response_generated
  response_edited
  response_approved
  response_rejected
  response_sent
  ticket_resolved
  ticket_closed
  ticket_reopened
}

Enum attachment_validation_status {
  pending
  valid
  rejected
  quarantined
}

Enum processing_job_type {
  text_preprocessing
  language_detection
  category_prediction
  priority_prediction
  sentiment_prediction
  ocr
  pii_masking
  retrieval
  response_generation
}

Enum processing_status {
  queued
  running
  succeeded
  failed
  timed_out
  skipped
}

Enum model_task {
  category
  priority
  sentiment
  language
  ocr
  pii_masking
  embedding
  response_generation
}

Enum model_deployment_status {
  experimental
  candidate
  active
  retired
}

Enum prediction_task {
  category
  priority
  sentiment
  language
}

Enum prediction_input_source {
  ticket_text
  ocr_text
  combined
}

Enum prediction_review_decision {
  pending
  accepted
  corrected
  rejected
}

Enum training_candidate_status {
  not_candidate
  pending
  approved
  rejected
}

Enum response_type {
  ai_draft
  agent_reply
  system_message
}

Enum response_status {
  generated_draft
  agent_edited
  approved
  rejected
  sent
}

Enum source_approval_status {
  pending
  approved
  rejected
  archived
}

Enum dataset_task {
  category
  priority
  sentiment
  language
  code_mixed
}

Enum dataset_split {
  train
  validation
  test
}

Enum setting_value_type {
  string
  integer
  decimal
  boolean
  json
}

/* =========================================================
   USERS AND SECURITY
   ========================================================= */

Table users {
  user_id uuid [pk]
  full_name varchar(150) [not null]
  email varchar(255) [not null, unique]
  password_hash text [not null]
  role user_role [not null]
  preferred_language interface_language [default: 'english']
  is_active boolean [not null, default: true]
  last_login_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    role
    is_active
  }
}

Table auth_sessions {
  session_id uuid [pk]
  user_id uuid [not null]
  refresh_token_hash text [not null, unique]
  ip_address varchar(45)
  user_agent text
  expires_at timestamp [not null]
  revoked_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    expires_at
  }
}

Table audit_logs {
  audit_id uuid [pk]
  user_id uuid
  action varchar(100) [not null]
  entity_type varchar(100) [not null]
  entity_id varchar(100)
  old_value jsonb
  new_value jsonb
  ip_address varchar(45)
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    entity_type
    entity_id
    created_at
  }
}

/* =========================================================
   QUEUES, CATEGORIES AND TICKETS
   ========================================================= */

Table support_queues {
  queue_id uuid [pk]
  queue_name varchar(100) [not null, unique]
  description text
  administrator_id uuid
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table ticket_categories {
  category_id int [pk, increment]
  category_code varchar(100) [not null, unique]
  display_name varchar(150) [not null]
  description text
  default_queue_id uuid
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Note: "Stores Banking77 categories or an approved category subset."
}

Table tickets {
  ticket_id uuid [pk]
  customer_id uuid [not null]
  assigned_agent_id uuid
  queue_id uuid
  final_category_id int

  original_text text [not null]
  normalised_text text
  masked_model_text text

  detected_language_form language_form [default: 'unknown']
  requested_response_language interface_language

  final_priority ticket_priority
  final_sentiment sentiment_label
  status ticket_status [not null, default: 'new']

  manual_review_required boolean [not null, default: false]
  escalation_reason text

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  resolved_at timestamp
  closed_at timestamp
  retention_until timestamp

  indexes {
    customer_id
    assigned_agent_id
    queue_id
    final_category_id
    status
    final_priority
    final_sentiment
    detected_language_form
    created_at
  }

  Note: "Preserves original text separately from model-ready and privacy-masked text."
}

Table ticket_notes {
  note_id uuid [pk]
  ticket_id uuid [not null]
  author_id uuid [not null]
  note_text text [not null]
  visibility note_visibility [not null, default: 'internal']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    ticket_id
    author_id
    created_at
  }
}

Table ticket_events {
  event_id uuid [pk]
  ticket_id uuid [not null]
  actor_id uuid
  event_type ticket_event_type [not null]
  old_value jsonb
  new_value jsonb
  reason text
  created_at timestamp [not null, default: `now()`]

  indexes {
    ticket_id
    actor_id
    event_type
    created_at
  }

  Note: "Provides timestamped ticket lifecycle and correction history."
}

/* =========================================================
   ATTACHMENTS AND PROCESSING
   ========================================================= */

Table attachments {
  attachment_id uuid [pk]
  ticket_id uuid [not null]
  uploaded_by uuid [not null]

  original_filename varchar(255) [not null]
  storage_path text [not null]
  mime_type varchar(100) [not null]
  file_size bigint [not null]
  file_hash varchar(128)

  validation_status attachment_validation_status [
    not null,
    default: 'pending'
  ]

  validation_message text
  uploaded_at timestamp [not null, default: `now()`]
  retention_until timestamp
  deleted_at timestamp

  indexes {
    ticket_id
    uploaded_by
    file_hash
    validation_status
  }

  Note: "Stores file metadata only; actual files remain in object or file storage."
}

Table processing_jobs {
  job_id uuid [pk]
  ticket_id uuid [not null]
  attachment_id uuid
  model_version_id uuid

  job_type processing_job_type [not null]
  status processing_status [not null, default: 'queued']

  retry_count int [not null, default: 0]
  error_code varchar(100)
  error_message text

  started_at timestamp
  completed_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    ticket_id
    attachment_id
    model_version_id
    job_type
    status
  }
}

Table image_evidence {
  evidence_id uuid [pk]
  attachment_id uuid [not null]
  job_id uuid

  raw_extracted_text text
  masked_text text
  detected_language_form language_form [default: 'unknown']
  confidence decimal(6,5)

  pii_detected boolean [not null, default: false]
  pii_types jsonb
  ocr_engine varchar(150)

  created_at timestamp [not null, default: `now()`]

  indexes {
    attachment_id
    job_id
  }

  Note: "Image evidence must not silently override explicit customer text."
}

/* =========================================================
   DATASETS AND MODEL VERSIONS
   ========================================================= */

Table dataset_versions {
  dataset_version_id uuid [pk]
  name varchar(150) [not null]
  version varchar(50) [not null]
  task dataset_task [not null]
  source_name varchar(150)
  description text
  annotation_method text
  created_by uuid
  is_frozen boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (name, version) [unique]
    task
  }
}

Table dataset_records {
  record_id uuid [pk]
  dataset_version_id uuid [not null]

  source_record_id varchar(150) [not null]
  lineage_id varchar(150) [not null]
  parent_record_id uuid

  text text [not null]
  label varchar(150) [not null]
  language_form language_form [not null]
  split dataset_split [not null]

  is_synthetic boolean [not null, default: false]
  metadata jsonb
  created_at timestamp [not null, default: `now()`]

  indexes {
    dataset_version_id
    source_record_id
    lineage_id
    language_form
    split

    (dataset_version_id, source_record_id, language_form) [unique]
  }

  Note: "All translated or romanised versions sharing one lineage_id must remain in the same split."
}

Table model_versions {
  model_version_id uuid [pk]
  task model_task [not null]
  model_name varchar(150) [not null]
  version varchar(50) [not null]

  dataset_version_id uuid
  preprocessing_version varchar(100)
  deployment_status model_deployment_status [
    not null,
    default: 'experimental'
  ]

  configuration jsonb
  created_by uuid
  created_at timestamp [not null, default: `now()`]
  activated_at timestamp

  indexes {
    (task, model_name, version) [unique]
    task
    deployment_status
  }
}

/* =========================================================
   MODEL PREDICTIONS AND HUMAN REVIEWS
   ========================================================= */

Table predictions {
  prediction_id uuid [pk]
  ticket_id uuid [not null]
  model_version_id uuid [not null]
  category_id int

  task_type prediction_task [not null]
  predicted_label varchar(150) [not null]
  confidence decimal(6,5)

  input_source prediction_input_source [not null]
  is_below_threshold boolean [not null, default: false]
  raw_output jsonb

  inference_timestamp timestamp [not null, default: `now()`]

  indexes {
    ticket_id
    model_version_id
    category_id
    task_type
    is_below_threshold
  }
}

Table prediction_reviews {
  review_id uuid [pk]
  prediction_id uuid [not null]
  reviewer_id uuid [not null]

  decision prediction_review_decision [
    not null,
    default: 'pending'
  ]

  corrected_label varchar(150)
  corrected_category_id int
  reason text

  training_candidate_status training_candidate_status [
    not null,
    default: 'not_candidate'
  ]

  reviewed_at timestamp [not null, default: `now()`]

  indexes {
    prediction_id
    reviewer_id
    decision
    training_candidate_status
  }

  Note: "Agent corrections do not automatically become approved training data."
}

/* =========================================================
   RESPONSES AND RAG KNOWLEDGE
   ========================================================= */

Table responses {
  response_id uuid [pk]
  ticket_id uuid [not null]
  version_no int [not null]
  parent_response_id uuid

  author_user_id uuid
  model_version_id uuid

  response_type response_type [not null]
  content text [not null]
  language interface_language [not null]
  status response_status [not null, default: 'generated_draft']

  grounding_confidence decimal(6,5)

  approved_by uuid
  approved_at timestamp
  sent_at timestamp

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    ticket_id
    parent_response_id
    author_user_id
    model_version_id
    status

    (ticket_id, version_no) [unique]
  }

  Note: "Each generation, regeneration or agent edit is stored as a separate version."
}

Table knowledge_sources {
  source_id uuid [pk]
  title varchar(255) [not null]
  knowledge_category varchar(100) [not null]
  language language_form [not null]

  source_url text
  storage_path text
  owner varchar(150) [not null]

  approval_status source_approval_status [
    not null,
    default: 'pending'
  ]

  version varchar(50) [not null]
  checksum varchar(128)

  approved_by uuid
  approved_at timestamp
  last_reviewed_at timestamp

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    knowledge_category
    language
    approval_status
    checksum
  }
}

Table knowledge_chunks {
  chunk_id uuid [pk]
  source_id uuid [not null]
  chunk_index int [not null]

  chunk_text text [not null]
  language language_form [not null]
  section_title varchar(255)

  vector_record_id varchar(255)
  metadata jsonb
  created_at timestamp [not null, default: `now()`]

  indexes {
    source_id
    language
    vector_record_id

    (source_id, chunk_index) [unique]
  }
}

Table response_citations {
  citation_id uuid [pk]
  response_id uuid [not null]
  chunk_id uuid [not null]

  retrieval_rank int [not null]
  similarity_score decimal(6,5)
  cited_excerpt text

  created_at timestamp [not null, default: `now()`]

  indexes {
    response_id
    chunk_id

    (response_id, chunk_id) [unique]
  }
}

/* =========================================================
   EVALUATION AND CONFIGURATION
   ========================================================= */

Table evaluation_runs {
  evaluation_run_id uuid [pk]
  model_version_id uuid [not null]
  dataset_version_id uuid [not null]
  split dataset_split [not null]

  preprocessing_configuration jsonb
  status processing_status [not null, default: 'queued']

  started_at timestamp
  completed_at timestamp
  created_by uuid
  notes text

  created_at timestamp [not null, default: `now()`]

  indexes {
    model_version_id
    dataset_version_id
    split
    status
  }
}

Table evaluation_metrics {
  metric_id uuid [pk]
  evaluation_run_id uuid [not null]

  language_form language_form
  class_label varchar(150)
  metric_name varchar(100) [not null]
  metric_value decimal(12,6) [not null]
  support_count int

  created_at timestamp [not null, default: `now()`]

  indexes {
    evaluation_run_id
    language_form
    class_label
    metric_name
  }
}

Table system_settings {
  setting_key varchar(120) [pk]
  setting_value jsonb [not null]
  value_type setting_value_type [not null]
  description text

  is_sensitive boolean [not null, default: false]
  updated_by uuid
  updated_at timestamp [not null, default: `now()`]

  Note: "Stores thresholds, active models, critical rules, image limits and retention periods."
}

/* =========================================================
   RELATIONSHIPS
   ========================================================= */

// Users and authentication
Ref: auth_sessions.user_id > users.user_id
Ref: audit_logs.user_id > users.user_id

// Queues and categories
Ref: support_queues.administrator_id > users.user_id
Ref: ticket_categories.default_queue_id > support_queues.queue_id

// Tickets
Ref: tickets.customer_id > users.user_id
Ref: tickets.assigned_agent_id > users.user_id
Ref: tickets.queue_id > support_queues.queue_id
Ref: tickets.final_category_id > ticket_categories.category_id

// Ticket notes and history
Ref: ticket_notes.ticket_id > tickets.ticket_id
Ref: ticket_notes.author_id > users.user_id
Ref: ticket_events.ticket_id > tickets.ticket_id
Ref: ticket_events.actor_id > users.user_id

// Attachments and processing
Ref: attachments.ticket_id > tickets.ticket_id
Ref: attachments.uploaded_by > users.user_id
Ref: processing_jobs.ticket_id > tickets.ticket_id
Ref: processing_jobs.attachment_id > attachments.attachment_id
Ref: processing_jobs.model_version_id > model_versions.model_version_id
Ref: image_evidence.attachment_id > attachments.attachment_id
Ref: image_evidence.job_id > processing_jobs.job_id

// Dataset lineage
Ref: dataset_versions.created_by > users.user_id
Ref: dataset_records.dataset_version_id > dataset_versions.dataset_version_id
Ref: dataset_records.parent_record_id > dataset_records.record_id

// Model versions and predictions
Ref: model_versions.dataset_version_id > dataset_versions.dataset_version_id
Ref: model_versions.created_by > users.user_id
Ref: predictions.ticket_id > tickets.ticket_id
Ref: predictions.model_version_id > model_versions.model_version_id
Ref: predictions.category_id > ticket_categories.category_id

// Human prediction reviews
Ref: prediction_reviews.prediction_id > predictions.prediction_id
Ref: prediction_reviews.reviewer_id > users.user_id
Ref: prediction_reviews.corrected_category_id > ticket_categories.category_id

// Responses
Ref: responses.ticket_id > tickets.ticket_id
Ref: responses.parent_response_id > responses.response_id
Ref: responses.author_user_id > users.user_id
Ref: responses.model_version_id > model_versions.model_version_id
Ref: responses.approved_by > users.user_id

// RAG knowledge
Ref: knowledge_sources.approved_by > users.user_id
Ref: knowledge_chunks.source_id > knowledge_sources.source_id
Ref: response_citations.response_id > responses.response_id
Ref: response_citations.chunk_id > knowledge_chunks.chunk_id

// Evaluation
Ref: evaluation_runs.model_version_id > model_versions.model_version_id
Ref: evaluation_runs.dataset_version_id > dataset_versions.dataset_version_id
Ref: evaluation_runs.created_by > users.user_id
Ref: evaluation_metrics.evaluation_run_id > evaluation_runs.evaluation_run_id

// Configuration
Ref: system_settings.updated_by > users.user_id
